--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-tailwindcss",
+  "name": "css-workshop",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,11 +8,25 @@
     "start": "next start"
   },
   "dependencies": {
+    "autoprefixer": "^10.0.4",
+    "framer-motion": "^3.2.2-rc.1",
     "next": "latest",
+    "postcss": "^8.1.10",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "autoprefixer": "^10.0.4",
-    "postcss": "^8.1.10",
     "tailwindcss": "^2.0.2"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-config-wesbos": "^1.0.1",
+    "eslint-plugin-html": "^6.1.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.2.1"
   }
 }
